apps/unithon/frontend-main/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unithon-frontend-main
  namespace: unithon
  labels:
    app: unithon-frontend-main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unithon-frontend-main
  template:
    metadata:
      labels:
        app: unithon-frontend-main
    spec:
      containers:
        - name: unithon-frontend-main
          image: hyeonwoo5342/unithon-frontend-main:8
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "100Mi"
              cpu: "30m"
            limits:
              memory: "100Mi"
              cpu: "30m"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 90
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 90
            periodSeconds: 10
