apps/unithon/frontend-main/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unithon-frontend-main
  namespace: unithon
  labels:
    app: unithon-frontend-main
spec:
  type: ClusterIP
  ports:
    - port: 3000
  selector:
    app: unithon-frontend-main
